--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    
+    <div class="header">Header Logo
+        <ul>
+            <li><a>header link one</a></li>
+            <li><a>header link two</a></li>
+            <li><a>header link three</a></li>
+        </ul>
+    </div>
+    <div class="main-content">
+        <h1>This webiste is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button type="button">Sign up</button>
+        <img src="images/plantImage.jpg" height="200px" width="200px">
+    </div>
 </body>
 </html>
