--- a/index.html
+++ b/index.html
@@ -15,10 +15,33 @@
         </ul>
     </div>
     <div class="main-content">
-        <h1>This webiste is awesome</h1>
+        <h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
         <button type="button">Sign up</button>
         <img src="images/plantImage.jpg" height="200px" width="200px">
+    </div>
+    <div class="secondary-content">
+        <h3>Some random information.</h3>
+        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+        <p>this is some subtext under an illustration or image</p>
+        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+        <p>this is some subtext under an illustration or image</p>
+        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+        <p>this is some subtext under an illustration or image</p>
+        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+    <div class="testimonial-block">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="sign-up-block">
+        <h6>Call to action! It's time!</h6>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button type="button">Sign up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright &copy; The Odin Project 2024</p>
     </div>
 </body>
 </html>
