--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <div class="header">Header Logo
-        <ul>
-            <li><a>header link one</a></li>
-            <li><a>header link two</a></li>
-            <li><a>header link three</a></li>
-        </ul>
-    </div>
-    <div class="main-content">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button type="button">Sign up</button>
-        <img src="images/plantImage.jpg" height="200px" width="200px">
-    </div>
+    <div class="header">
+        <div class="links">Header Logo
+            <ul>
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
+        </div>
+        <div class="main-content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button type="button">Sign up</button>
+            <img src="images/plantImage.jpg" height="200px" width="200px">
+        </div>
+    </div>    
     <div class="secondary-content">
         <h3>Some random information.</h3>
         <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
