--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
 </head>
 <body>
     <div class="header">
-        <div class="links">Header Logo
-            <ul>
-                <li><a>header link one</a></li>
-                <li><a>header link two</a></li>
-                <li><a>header link three</a></li>
-            </ul>
-        </div>
-        <div class="main-content">
+        <div class="logo">Logo</div>
+        <ul>
+            <li><a>header link one</a></li>
+            <li><a>header link two</a></li>
+            <li><a>header link three</a></li>
+        </ul>
+    </div>
+    <div class="main-content">
+        <div class="title-button">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button type="button">Sign up</button>
-            <img src="images/plantImage.jpg" height="200px" width="200px">
         </div>
+        <img src="images/plantImage.jpg" id="mainImage" height="200px" width="250px">
     </div>    
     <div class="secondary-content">
         <h3>Some random information.</h3>
-        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-        <p>this is some subtext under an illustration or image</p>
-    </div>
+        <div class="images">
+            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        </div>
     <div class="testimonial-block">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
