--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Logo</div>
-        <ul>
-            <li><a>header link one</a></li>
-            <li><a>header link two</a></li>
-            <li><a>header link three</a></li>
-        </ul>
-    </div>
-    <div class="main-content">
-        <div class="title-button">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button type="button">Sign up</button>
+    <div class="top-section">
+        <div class="header">
+            <div class="logo">Logo</div>
+            <ul>
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
         </div>
-        <img src="images/plantImage.jpg" id="mainImage" height="200px" width="250px">
+        <div class="main-content">
+            <div class="title-button">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button type="button">Sign up</button>
+            </div>
+            <img src="images/plantImage.jpg" id="mainImage" height="200px" width="250px">
+        </div>
     </div>    
     <div class="secondary-content">
         <h3>Some random information.</h3>
