--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         <p>-Thor, God of Thunder</p>
     </div>
     <div class="sign-up-block">
-        <h6>Call to action! It's time!</h6>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button type="button">Sign up</button>
-    </div>
+        <div class="call-to-action">
+            <h6>Call to action! It's time!</h6>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button type="button">Sign up</button>
+        </div>
+        </div>
     <div class="footer">
         <p>Copyright &copy; The Odin Project 2024</p>
     </div>
