--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
     <div class="secondary-content">
         <h3>Some random information.</h3>
         <div class="images">
-            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-            <p>this is some subtext under an illustration or image</p>
-            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-            <p>this is some subtext under an illustration or image</p>
-            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-            <p>this is some subtext under an illustration or image</p>
-            <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="info">
+                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">    
+                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <p>this is some subtext under an illustration or image</p>
+            </div>    
         </div>
-        </div>
+    </div>
     <div class="testimonial-block">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
@@ -48,7 +56,7 @@
             <p>Sign up for our product by clicking that button right over there!</p>
             <button type="button">Sign up</button>
         </div>
-        </div>
+    </div>
     <div class="footer">
         <p>Copyright &copy; The Odin Project 2024</p>
     </div>
