--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <div class="top-section">
-        <div class="header">
-            <div class="logo">Logo</div>
+    <div class="top-container">
+        <div class="header-section">
+            <div class="logo"> Header Logo</div>
             <ul>
                 <li><a>header link one</a></li>
                 <li><a>header link two</a></li>
                 <li><a>header link three</a></li>
             </ul>
         </div>
-        <div class="main-content">
+        <div class="main-content-section">
             <div class="title-button">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
@@ -25,35 +25,39 @@
             <img src="images/plantImage.jpg" id="mainImage" height="200px" width="250px">
         </div>
     </div>    
-    <div class="secondary-content">
+    <div class="secondary-content-container">
         <h3>Some random information.</h3>
-        <div class="images">
+        <div class="images-section">
             <div class="info">
-                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <img src="images/plantImage.jpg" alt="an image">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
-                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <img src="images/plantImage.jpg" alt="an image">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">    
-                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <img src="images/plantImage.jpg" alt="an image">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
-                <img src="images/plantImage.jpg" alt="an image" height="100px" width="100px">
+                <img src="images/plantImage.jpg" alt="an image">
                 <p>this is some subtext under an illustration or image</p>
             </div>    
         </div>
     </div>
-    <div class="testimonial-block">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+    <div class="testimonial-block-container">
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        </div>
+        <p class="quote-person">-Thor, God of Thunder</p>
     </div>
-    <div class="sign-up-block">
+    <div class="sign-up-block-container">
         <div class="call-to-action">
-            <h6>Call to action! It's time!</h6>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="call-text"
+                <h6>Call to action! It's time!</h6>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>    
             <button type="button">Sign up</button>
         </div>
     </div>
