Edit call to action button and text
Improve visibility and styling of call to action
container. Text is made larger and and spacing
is removed. Sign up button and text styling
improved.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
     <div class="sign-up-block-container">
         <div class="call-to-action">
-            <div class="call-text"
-                <h6>Call to action! It's time!</h6>
+            <div class="call-text">
+                <h2>Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>    
             <button type="button">Sign up</button>
